Made a bunch of changes to the CSS file for mobile responsive assignment

--- a/Basic-Portfolio/style.css
+++ b/Basic-Portfolio/style.css
@@ -201,16 +201,71 @@ input[type=submit] {
   border: 0 none;
 }
 
+/*WHEN VIEWPOINT IS BETWEEN 769PX AND 980PX*/
 @media screen and (max-width: 980px) {
-
+ /*IS IT NOT RECOMMENDED TO DESIGNATE SPECIFIC DIMENSIONS BC IT'LL FUCK UP AT DIFFERENT VIEWPOINT SIZES?*/
+  .auth-image {
+    width: 300px;
+    height: auto;
+  }
+  .main-section {
+    max-width: 400px;
+    margin-left: 70px;
+  }
+  .sidebar {
+    margin-right:70px;
+  }
+  #logo {
+    margin-left: 70px;
+  }
+  nav {
+    margin-right: 70px;
+  }
 }
 
+/*WHEN VIEWPOINT IS BETWEEN 641PX AND 768PX*/
 @media screen and (max-width: 768px) {
+  #masthead {
+    width: 100%;
+  }
+  nav {
+    margin-right: 15px;
+  }
+  .main-section {
+    max-width: 95%;
+    margin: auto;
+  }
+  #main-container {
+    padding-left: 30px;
+  }
+  .sidebar {
+    max-width: 80%;
+    margin-left: 70px;
+    margin-right: 30px;
+  }
+  #logo {
+    margin-left: 30px;
+  }
+  .work {
+    margin-left: 10px;
+    /*float: none;*/
+    width: auto;
+  }
+  .work:nth-child(even) {
+    margin-right: 0;
+  }
 
-}
 
+/*WHEN VIEWPOINT IS BETWEEN 0PX AND 640PX*/
 @media screen and (max-width: 640px) {
   #masthead {
     position: static;
+  }
+  #logo {
+    float: none;
+    margin: none;
+  }
+  nav {
+    float: none;
   }
 }
